Improve the code quality and add more tests for the tree package.